Fix spacing between icon & title in navbar

--- a/themes/modern-magazine/static/css/theme.css
+++ b/themes/modern-magazine/static/css/theme.css
@@ -9,3 +9,7 @@ svg.icon .primary {
 svg.icon .secondary {
     color: lightgrey;
 }
+
+.navbar .title {
+    margin-left: 8px;
+}
